--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -155,7 +155,7 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
   <tbody>
     <tr>
       <td><strong>Tela transacional</strong></td>
-      <td>O Checkout Cielo possui uma tela transacional própria, com um layout otimizado, encurtando os passos no pagamento de suas transações. <br /></td>
+      <td>O Checkout Cielo possui uma tela transacional própria, com um layout otimizado, encurtando os passos no pagamento de suas transações.</td>
     </tr>
     <tr>
       <td><strong>Registro de Compradores</strong></td>
@@ -175,7 +175,7 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
     </tr>
     <tr>
       <td><strong>Meios de pagamentos</strong></td>
-      <td>O Checkout Cielo possui uma variada gama de meios de pagamento: <br /><br /> <strong>Cartões de crédito</strong> <br /> <strong>Cartão de Débito</strong><br /><strong>Débito Online</strong><br /><strong>Boleto Bradesco e Banco do Brasil</strong><br /></td>
+      <td>O Checkout Cielo possui uma variada gama de meios de pagamento: <br /> <strong>Cartões de crédito</strong> <br /> <strong>Cartão de Débito</strong><br /><strong>Débito Online</strong><br /><strong>Boleto Bradesco e Banco do Brasil</strong></td>
     </tr>
     <tr>
       <td><strong>Backoffice Simplificado</strong></td>
@@ -191,7 +191,7 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
     </tr>
     <tr>
       <td><strong>Relatórios transacionais</strong></td>
-      <td>Dentro do Backoffice, é possível gerar relatórios transnacionais que facilitam a administração de suas vendas: <br /><br /> <strong>Relatório de Recorrências</strong> <br /> <strong>Relatório de compradores</strong><br /><strong>Extrato de vendas</strong><br /><strong>Relatório de vendas</strong><br /><br /></td>
+      <td>Dentro do Backoffice, é possível gerar relatórios transnacionais que facilitam a administração de suas vendas: <br /> <strong>Relatório de Recorrências</strong> <br /> <strong>Relatório de compradores</strong><br /><strong>Extrato de vendas</strong><br /><strong>Relatório de vendas</strong></td>
     </tr>
   </tbody>
 </table>
@@ -293,11 +293,11 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
   <tbody>
     <tr>
       <td>Visa</td>
-      <td>Bradesco<br />Banco do Brasil<br />HSBC<br />Santander<br />Itaú<br />BRB<br />Safra<br />Banco da Amazônia<br />Sicredi<br />Banco do Espirito Santo<br />Banco do Nordeste<br />Mercantil<br /></td>
+      <td>Bradesco<br />Banco do Brasil<br />HSBC<br />Santander<br />Itaú<br />BRB<br />Safra<br />Banco da Amazônia<br />Sicredi<br />Banco do Espirito Santo<br />Banco do Nordeste<br />Mercantil</td>
     </tr>
     <tr>
       <td>Mastercard</td>
-      <td>Banco do Brasil<br />Santander<br />Itaú<br />BRB<br />Sicredi<br />Bancoob<br />CitiBank<br /></td>
+      <td>Banco do Brasil<br />Santander<br />Itaú<br />BRB<br />Sicredi<br />Bancoob<br />CitiBank</td>
     </tr>
   </tbody>
 </table>
@@ -1006,7 +1006,7 @@ Esses dados são separados nos seguintes “nós principais”:</p>
       <td>Alphanumeric</td>
       <td>Sim</td>
       <td>255</td>
-      <td>Tipo do item no carrinho: <code class="highlighter-rouge">Asset</code><code class="highlighter-rouge">Digital</code><code class="highlighter-rouge">Service</code><code class="highlighter-rouge">Payment</code></td>
+      <td>Tipo do item no carrinho: <br /><code class="highlighter-rouge">Asset</code><br /><code class="highlighter-rouge">Digital</code><br /><code class="highlighter-rouge">Service</code><br /><code class="highlighter-rouge">Payment</code></td>
       <td> </td>
     </tr>
     <tr>
@@ -1465,7 +1465,7 @@ Os descontos disponíveis no Checkout Cielo são:</p>
       <td>Alphanumeric</td>
       <td>Sim</td>
       <td>255</td>
-      <td>Tipo do frete: <code class="highlighter-rouge">Correios</code><code class="highlighter-rouge">FixedAmount</code><code class="highlighter-rouge">Free</code><code class="highlighter-rouge">WithoutShippingPickUp</code><code class="highlighter-rouge">WithoutShipping</code></td>
+      <td>Tipo do frete: <br /><code class="highlighter-rouge">Correios</code><br /><code class="highlighter-rouge">FixedAmount</code><br /><code class="highlighter-rouge">Free</code><br /><code class="highlighter-rouge">WithoutShippingPickUp</code><br /><code class="highlighter-rouge">WithoutShipping</code></td>
       <td> </td>
     </tr>
     <tr>
@@ -1610,7 +1610,7 @@ Os descontos disponíveis no Checkout Cielo são:</p>
       <td>Alphanumeric</td>
       <td>Obrigatório</td>
       <td>Inteiro</td>
-      <td>Tipo de pacote: <code class="highlighter-rouge">BOX</code>- Caixa  <code class="highlighter-rouge">ROL</code> - Cilindro ou ENVELOPE</td>
+      <td>Tipo de pacote: <br /><code class="highlighter-rouge">BOX</code>- Caixa <br /> <code class="highlighter-rouge">ROL</code> - Cilindro ou ENVELOPE</td>
       <td> </td>
     </tr>
     <tr>
@@ -1739,7 +1739,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   <tbody>
     <tr>
       <td>**Específico **</td>
-      <td>Cada botão gerado serve somente para um determinado produto ou grupo de produtos. A quantidade e volume de produtos vendido é definido no cadastro do Botão, não sendo possível altera a quantidade na tela transacional <strong>Exemplo:</strong> Será necessário criar Um botão para vender 1 camisa. Se o comprador desejar 2 camisas, ele precisará usar o botão 2X ou O lojista deverá criar um botão com 2 camisas</td>
+      <td>Cada botão gerado serve somente para um determinado produto ou grupo de produtos. A quantidade e volume de produtos vendido é definido no cadastro do Botão, não sendo possível altera a quantidade na tela transacional <br /><strong>Exemplo:</strong> Será necessário criar Um botão para vender 1 camisa. Se o comprador desejar 2 camisas, ele precisará usar o botão 2X ou O lojista deverá criar um botão com 2 camisas</td>
     </tr>
     <tr>
       <td><strong>número do Pedido do Checkout</strong></td>
@@ -1928,7 +1928,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
     <tr>
       <td>2</td>
       <td><strong>AUTORIZADO / NEGADO</strong></td>
-      <td>Resultado do processo de autorização. <strong>AUTORIZADO</strong> - Crédito foi reservado para a compra  <strong>NEGADO</strong> - Cartão não autorizado pelo emissor a continuar a transação</td>
+      <td>Resultado do processo de autorização. <br /><strong>AUTORIZADO</strong> - Crédito foi reservado para a compra <br /> <strong>NEGADO</strong> - Cartão não autorizado pelo emissor a continuar a transação</td>
     </tr>
     <tr>
       <td>3</td>
@@ -2203,17 +2203,17 @@ Vale destacar que o Checkout realiza a notificação somente quando uma transaç
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">URL de Retorno</code></td>
-      <td>Página web na qual o comprador será redirecionado ao fim da compra. Nenhum dado é trocado ou enviado para essa URL. Essa URL apenas leva o comprador, após finalizar a compra, a uma página definida pela loja.</td>
-      <td>Caso o Lojista deseje, ele pode configurar essa página para ser sensibilizada por tráfego, assim identificando que a transação foi finalizada no Checkout Cielo  Pode ser enviada via API - Ver “Integração por API”</td>
+      <td>Página web na qual o comprador será redirecionado ao fim da compra. <br />Nenhum dado é trocado ou enviado para essa URL.<br /> Essa URL apenas leva o comprador, após finalizar a compra, a uma página definida pela loja.</td>
+      <td>Caso o Lojista deseje, ele pode configurar essa página para ser sensibilizada por tráfego, assim identificando que a transação foi finalizada no Checkout Cielo <br /> Pode ser enviada via API - Ver “Integração por API”</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">URL de Notificação</code></td>
-      <td>Ao finalizar uma transação é enviado um POST HTTP com todos os dados da venda para a URL de Notificação. O POST de notificação é enviado apenas no momento que a transação é finalizada, independentemente se houve alteração do status da transação**</td>
+      <td>Ao finalizar uma transação é enviado um POST HTTP com todos os dados da venda para a URL de Notificação.<br /> O POST de notificação é enviado apenas no momento que a transação é finalizada, independentemente se houve alteração do status da transação**</td>
       <td>Utilizada na Notificação via <code class="highlighter-rouge">POST</code>e <code class="highlighter-rouge">JSON</code></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">URL de Mudança de Status</code></td>
-      <td>Quando um pedido tiver seu status alterado, será enviando um post HTTP para a URL de Mudança de Status. O POST de mudança de status não contem dados do carrinho, apenas dados de identificação do pedido</td>
+      <td>Quando um pedido tiver seu status alterado, será enviando um post HTTP para a URL de Mudança de Status.<br /> O POST de mudança de status não contem dados do carrinho, apenas dados de identificação do pedido</td>
       <td>Utilizada somente na Notificação via <code class="highlighter-rouge">POST</code></td>
     </tr>
   </tbody>
@@ -2936,11 +2936,11 @@ Alguns exemplos de negócios são:</p>
   <tbody>
     <tr>
       <td><strong>Parceladas</strong></td>
-      <td>Se trata de <strong>uma transação dividida em vários meses</strong>. O valor total da venda compromete o limite do cartão de crédito do comprador independentemente do valor da parcela inicial. O lojista recebe o valor da venda parceladamente e não corre o risco de uma das parcelas ser negada.<br /><br /> <strong>EX</strong>: Venda de R$1.000,00 parcelado em 2 vezes. Apesar de o comprador pagar apenas R$500,00 na primeira parcela, o valor do limite de crédito consumido é o integral, ou seja, R$1.000,00. Se o limite do cartão for inferior ou o montante não estiver liberado, a R$1.000,00 a transação será negada</td>
+      <td>Se trata de <strong>uma transação dividida em vários meses</strong>. <br />O valor total da venda compromete o limite do cartão de crédito do comprador independentemente do valor da parcela inicial.<br /> O lojista recebe o valor da venda parceladamente e não corre o risco de uma das parcelas ser negada.<br /> <strong>EX</strong>: Venda de R$1.000,00 parcelado em 2 vezes. Apesar de o comprador pagar apenas R$500,00 na primeira parcela, o valor do limite de crédito consumido é o integral, ou seja, R$1.000,00. Se o limite do cartão for inferior ou o montante não estiver liberado, a R$1.000,00 a transação será negada</td>
     </tr>
     <tr>
       <td><strong>Recorrentes</strong></td>
-      <td>São <strong>transações diferentes realizadas no mesmo cartão em momentos previamente agendados</strong>. A primeira venda agenda as futuras vendas a partir de um intervalo de tempo pré definido.  A cada intervalo haverá uma cobrança no cartão de crédito.  O pagamento recorrente bloqueia do limite do cartão apenas o valor debitado na data da primeira venda recorrente e do valor total da venda.<br /><br /> <strong>EX</strong>: Venda de R$ 1.000,00 em 15/01/2015, com recorrência mensal e data final em 01/06/2015. Todo dia 15 haverá uma nova cobrança de R$1.000,00 no cartão do comprador, se repetindo até 15/05/2015, última data válida antes da data final.</td>
+      <td>São <strong>transações diferentes realizadas no mesmo cartão em momentos previamente agendados</strong>.<br /> A primeira venda agenda as futuras vendas a partir de um intervalo de tempo pré definido.<br />  A cada intervalo haverá uma cobrança no cartão de crédito. <br /> O pagamento recorrente bloqueia do limite do cartão apenas o valor debitado na data da primeira venda recorrente e do valor total da venda.<br /> <strong>EX</strong>: Venda de R$ 1.000,00 em 15/01/2015, com recorrência mensal e data final em 01/06/2015. Todo dia 15 haverá uma nova cobrança de R$1.000,00 no cartão do comprador, se repetindo até 15/05/2015, última data válida antes da data final.</td>
     </tr>
   </tbody>
 </table>
@@ -3151,9 +3151,9 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
   <li>Entrar em Detalhes (o símbolo de “+”)</li>
 </ol>
 
-<p><img src="https://developercielo.github.io/images/checkout-cancelar-recorrencia.png" alt="Pedido de recorrência" />
-<br />
-<img src="https://developercielo.github.io/images/checkout/pedidoreccance.png" alt="Cancelamento de recorrência" /></p>
+<p><img src="https://developercielo.github.io/images/checkout-cancelar-recorrencia.png" alt="Pedido de recorrência" /></p>
+
+<p><img src="https://developercielo.github.io/images/checkout/pedidoreccance.png" alt="Cancelamento de recorrência" /></p>
 
 <p>Tela de detalhes da Recorrência</p>
 
