--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -154,7 +154,7 @@
     </tr>
     <tr>
       <td><strong>Relatórios</strong></td>
-      <td>Nesta pagina é possível gerar 05 tipos de relatórios: “Relatório financeiro”“Detalhado de vendas”“Listagem de clientes”* “Extrato de Cobrança”“Relatório de Recorrência”</td>
+      <td>Nesta pagina é possível gerar 05 tipos de relatórios: <br />“Relatório financeiro”<br />“Detalhado de vendas”<br />“Listagem de clientes”<br />* “Extrato de Cobrança”<br />“Relatório de Recorrência”</td>
     </tr>
     <tr>
       <td><strong>Manuais</strong></td>
@@ -491,7 +491,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
   <tbody>
     <tr>
       <td><strong>Valor minimo parcela</strong></td>
-      <td>Caso o valor da parcela da compra seja inferior ao minimo, o Checkout exibirá apenas a parcela superior ao minimo <br /><br /> <strong>EX:</strong> Parcela minima de R$5,00, Em uma compra de R$10, não será exibida a opção de parcelamento em 3X, apenas em 2X</td>
+      <td>Caso o valor da parcela da compra seja inferior ao minimo, o Checkout exibirá apenas a parcela superior ao minimo <br /> <strong>EX:</strong> Parcela minima de R$5,00, Em uma compra de R$10, não será exibida a opção de parcelamento em 3X, apenas em 2X</td>
     </tr>
     <tr>
       <td><strong>Valor mínimo para pagamento com boleto</strong></td>
@@ -677,7 +677,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   <tbody>
     <tr>
       <td><strong>Específico</strong></td>
-      <td>Cada botão gerado serve somente para um determinado produto ou grupo de produtos. A quantidade e volume de produtos vendido é definido no cadastro do Botão, não sendo possível altera a quantidade na tela transacional <strong>Exemplo:</strong> Será necessário criar Um botão para vender 1 camisa. Se o comprador desejar 2 camisas, ele precisará usar o botão 2X ou O lojista deverá criar um botão com 2 camisas</td>
+      <td>Cada botão gerado serve somente para um determinado produto ou grupo de produtos. A quantidade e volume de produtos vendido é definido no cadastro do Botão, não sendo possível altera a quantidade na tela transacional <br /><strong>Exemplo:</strong> Será necessário criar Um botão para vender 1 camisa. Se o comprador desejar 2 camisas, ele precisará usar o botão 2X ou O lojista deverá criar um botão com 2 camisas</td>
     </tr>
     <tr>
       <td><strong>número do Pedido do Checkout</strong></td>
