[174c55305e8e04097958d3ae4689ece721089992]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -170,7 +170,7 @@
 <p>As mesmas poderão ser enviadas no momento transacional (captura) ou pós-transacional. Caso não sejam enviadas, serão consideradas as taxas cadastradas e acordadas previamente entre o participantes.</p>
 
 <blockquote>
-  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação, definido por produto (Crédito / Débito), Bandeira e Faixa de Parcelamento.
+  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação, definido por produto (Crédito / Débito), Bandeira e Faixa de Parcelamento. <br />
 <strong>Tarifa Fixa:</strong> Valor em centavos a ser cobrado por transação capturada.</p>
 </blockquote>
 
