--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -146,7 +146,7 @@
 <blockquote>
   <p><strong>Regime de Pagamento</strong>: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.
 <br />
-<strong>Crédito</strong>: Em até 31 dias.
+<strong>Crédito</strong>: Em até 31 dias. <br />
 <strong>Crédito Parcelado</strong>: 1º parcela em até 31 dias, demais a cada 30.
 <strong>Débito</strong>: Em até 1 dia útil.</p>
 </blockquote>
