--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ title: Home
     <div class="dev-hub-info">
         <h2>{% t global.hub_title %}</h2>
         <p>{% t global.hub_description %}</p>
+        <p>{{ t sorted }}</p>
     </div>
 </div>
 
