Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
 <div class="dev-hub-title">
     <div class="dev-hub-info">
         <h2>{% t global.hub_title %}</h2>
-        
+        <p>{% t global.hub_description %}</p>
     </div>
 </div>
 
