--- a/en/index.html
+++ b/en/index.html
@@ -84,7 +84,7 @@
 <div class="dev-hub-title">
     <div class="dev-hub-info">
         <h2>Cielo Developers</h2>
-        
+        <p>Documents, articles and tutorials of all Braspag products are available on this page</p>
     </div>
 </div>
 
